--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,8 @@ apply plugin: 'kotlin-android-extensions'
 ext {
     GROUP_ID = 'araib.me'
     ARTIFACT_ID = 'ad'
-    VERSION = '0.1.3'
+    CORE_VERSION = '0.1.3'
+    VERSION = '.1'
 }
 
 android {
@@ -20,7 +21,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
-        versionName "$VERSION"
+        versionName "$CORE_VERSION$VERSION"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -40,9 +41,9 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    api "com.github.Araib93:core:${VERSION}"
+    compileOnly "com.github.Araib93:core:${CORE_VERSION}"
 
-    api 'com.facebook.android:audience-network-sdk:5.4.1'
-    api "com.google.android.gms:play-services-base:17.1.0"
-    api 'com.google.android.gms:play-services-ads:18.2.0'
+    implementation 'com.facebook.android:audience-network-sdk:5.4.1'
+    implementation "com.google.android.gms:play-services-base:17.1.0"
+    implementation 'com.google.android.gms:play-services-ads:18.2.0'
 }
