--- a/ad/build.gradle
+++ b/ad/build.gradle
@@ -8,7 +8,7 @@ ext {
     GROUP_ID = 'araib.me'
     ARTIFACT_ID = 'ad'
     CORE_VERSION = '0.1.3'
-    VERSION = '.1'
+    VERSION = '.2'
 }
 
 android {
@@ -41,7 +41,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    compileOnly "com.github.Araib93:core:${CORE_VERSION}"
+    implementation "com.github.Araib93:core:${CORE_VERSION}"
 
     implementation 'com.facebook.android:audience-network-sdk:5.4.1'
     implementation "com.google.android.gms:play-services-base:17.1.0"
